--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -84,6 +84,11 @@ echo $this->render('partials/header/metaheader.phtml'); ?>
                                                 <li class="link first">
                                                     <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'products') ?>"><?= $this->translate('My Products') ?></a>
                                                 </li>
+                                                <li class="link first">
+                                                <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'payout') ?>">
+                                                    <?= $this->translate('My plings') ?>
+                                                </a>
+                                                </li>
                                                 <li class="link">
                                                     <a href="/settings/"><?= $this->translate('My Settings') ?></a>
                                                 </li>
