--- a/application/modules/default/views/scripts/user/partials/loopPayout.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPayout.phtml
@@ -69,10 +69,11 @@
 <div class="container-fluid margin-bottom-10" style="padding-left: 0; padding-right: 0;">
     <div class="row">
         <div class="col-md-1"></div>
-        <div class="col-md-5 text-left text-uppercase"><strong>Product</strong></div>
+        <div class="col-md-3 text-left text-uppercase"><strong>Product</strong></div>
         <div class="col-md-2 text-right text-uppercase"><strong>Downloads</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Downloads" data-trigger="hover" data-html="true" data-content="Sum of all downloads of all files of this product within this month."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
         <div class="col-md-2 text-right text-uppercase"><strong>Factor</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Factor" data-trigger="hover" data-html="true" data-content="The factor is the ratio of download to pling. The factor depends on the product category.<br>A factor of 1.0 means 1 download = 1 pling."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
         <div class="col-md-2 text-right text-uppercase"><strong>plings</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="plings" data-trigger="hover" data-html="true" data-content="You can collect new plings every month. The number of plings results from the pling factor. At the beginning of each month you will be paid the plings of the previous month to your PayPal account. Where: <b>1 pling = $0.01</b>.<br>A valid PayPal address must be maintained in your settings and the payout amount must be at least one dollar. If you do not meet these requirements, we can not pay you anything. We will check these requirements every month."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
+        <div class="col-md-2 text-right text-uppercase"><strong>Payment</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="plings" data-trigger="hover" data-html="true" data-content="You can collect new plings every month. The number of plings results from the pling factor. At the beginning of each month you will be paid the plings of the previous month to your PayPal account. Where: <b>1 pling = $0.01</b>.<br>A valid PayPal address must be maintained in your settings and the payout amount must be at least one dollar. If you do not meet these requirements, we can not pay you anything. We will check these requirements every month."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
     </div>
 </div>
 <div class="tab-content">
@@ -97,18 +98,21 @@ foreach ($allDownloads as $month => $products) {
                     <img src="<?php echo $helpImage->Image($product['image_small'],
                         array('width' => 80, 'height' => 65)); ?> " height="81" width="101"/>
                 </div>
-                <div class="col-md-5 text-left cell-default">
+                <div class="col-md-3 text-left cell-default">
                     <span style="line-height: 3em;"><?= $product['title']; ?></span>
                     <b style="display: block; margin-bottom: 5px; font-size: 10pt; line-height: 0em;"><?=$product['cat_title']?></b>
                 </div>
                 <div class="col-md-2 text-right cell-default">
-                    <span><?= number_format($product['num_downloads']) ?></span>
+                    <span><?= $product['num_downloads'] ?></span>
                 </div>
                 <div class="col-md-2 text-right cell-default">
-                    <span><?= $product['dl_pling_factor'] ?></span>
+                    <span><?= round($product['dl_pling_factor'],0) ?></span>
                 </div>
                 <div class="col-md-2 text-right cell-default">
-                    <span><?= number_format($product['num_downloads'] * $product['dl_pling_factor']) ?></span>
+                    <span><?= $product['num_downloads'] * $product['dl_pling_factor'] ?></span>
+                </div>
+                <div class="col-md-2 text-right cell-default">
+                    <span><?= $currency->toCurrency($product['num_downloads'] * $product['dl_pling_factor'] / 100) ?></span>
                 </div>
 
             </div>
@@ -125,7 +129,6 @@ foreach ($allDownloads as $month => $products) {
         $sum_total_month_view = number_format($sum_total_month);
         ?>
         <div class='row row-total'>
-            <div class='col-md-11 text-right'>Sum of all plings:</div><div class='col-md-1 text-right'><?=$sum_total_month_view?></div>
             <div class='col-md-11 text-right'><?=$sum_total_text?></div><div class='col-md-1 text-right'><strong><?=$sum_total_payout?></strong></div>
         </div>
         <?php 
@@ -135,6 +138,8 @@ foreach ($allDownloads as $month => $products) {
         $viewDate = $month."";
         $paypalWarning = '';
         if($currentDate == $viewDate) {
+            $getAuthUser = new Default_View_Helper_GetAuthUser();
+            $member = $getAuthUser->getAuthUser();
             $paypalWarning = 'You have no PayPal account configured. Please go to your settings page <a href="/settings#payments-collapse">here</a>.';
         } else {
             $paypalWarning = 'We found no valid Paypal account for this month. That\'s why we could not pay you any money. In order to receive money for the current month, please make sure that a paypal account is registered. Go to your settings page <a href="/settings#payments-collapse">here</a>.';
