--- a/application/modules/default/views/scripts/user/partials/loopPayout.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPayout.phtml
@@ -140,7 +140,12 @@ foreach ($allDownloads as $month => $products) {
         if($currentDate == $viewDate) {
             $getAuthUser = new Default_View_Helper_GetAuthUser();
             $member = $getAuthUser->getAuthUser();
-            $paypalWarning = 'You have no PayPal account configured. Please go to your settings page <a href="/settings#payments-collapse">here</a>.';
+            if(!isset($member->paypal_mail)) {
+                $has_paypal = false;
+                $paypalWarning = 'You have no PayPal account configured. Please go to your settings page <a href="/settings#payments-collapse">here</a>.';
+            } else {
+                $has_paypal = true;
+            }
         } else {
             $paypalWarning = 'We found no valid Paypal account for this month. That\'s why we could not pay you any money. In order to receive money for the current month, please make sure that a paypal account is registered. Go to your settings page <a href="/settings#payments-collapse">here</a>.';
         }
