--- a/application/modules/default/views/scripts/user/partials/userHeader.phtml
+++ b/application/modules/default/views/scripts/user/partials/userHeader.phtml
@@ -50,12 +50,7 @@ $helperMember = new Default_View_Helper_BuildMemberUrl();
         <?php endif ?>
     </li>
 
-    <li class="header-menu-left-item <?php echo $this->tab == 'payout' ? 'active' : ''; ?>">
-        <a href="<?php echo $helperMember->buildMemberUrl($this->member->member_id, 'payout'); ?>">
-            <span class="glyphicon glyphicon-usd"></span>
-            <?= $this->translate('My plings') ?>
-        </a>
-    </li>
+    
 
     <li class="header-menu-left-item <?php echo $this->tab == 'earnings' ? 'active' : ''; ?>">
         <a href="<?php echo $helperMember->buildMemberUrl($this->member->member_id, 'income'); ?>">
@@ -75,6 +70,13 @@ $helperMember = new Default_View_Helper_BuildMemberUrl();
         <a href="/settings/">
             <span class="glyphicon glyphicon-cog"></span>
             <?= $this->translate('My Settings') ?>
+        </a>
+    </li>
+    
+    <li class="header-menu-left-item <?php echo $this->tab == 'payout' ? 'active' : ''; ?>">
+        <a href="<?php echo $helperMember->buildMemberUrl($this->member->member_id, 'payout'); ?>">
+            <span class="glyphicon glyphicon-usd"></span>
+            <?= $this->translate('Plings') ?>
         </a>
     </li>
 </ul>
