--- a/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
@@ -28,6 +28,8 @@ $loopProductId = 'product' . $this->project_id;
 $object_text = (mb_strlen($this->description) < 300) ? $this->description : mb_substr($this->description, 0, 295, 'UTF-8') . ' ... ';
 $addedOnDate = $this->humanTiming($this->created_at);
 $addedOnText = $addedOnDate['age'] . ' ' . $addedOnDate['unit'];
+$updatedOnDate = $this->humanTiming($this->changed_at);
+$updatedOnText = $updatedOnDate['age'] . ' ' . $updatedOnDate['unit'];
 $websiteOwner = new Local_Verification_WebsiteAuthCodeExist();
 $websiteAuthCode = $websiteOwner->generateAuthCode(stripslashes($this->link_1));
 
@@ -51,7 +53,8 @@ $helperImage = new Default_View_Helper_Image();
     <article class="col-lg-11 col-md-9 col-sm-9 col-xs-9">
         <!-- title -->
         <div class="title">
-            <h3><a href="<?= $helperBuildProductUrl->buildProductUrl($this->project_id) ?>"><?php echo $this->title; ?> <?php echo $this->version; ?></a><span style="font-weight: 700;">added <?= $addedOnText ?> ago</span></h3>
+            <h3><a href="<?= $helperBuildProductUrl->buildProductUrl($this->project_id) ?>"><?php echo $this->title; ?> <?php echo $this->version; ?></a><span style="font-weight: 700; font-size: small"> added <?= $addedOnText ?> ago</span></h3>
+            <span style="font-weight: 700; font-size: small; float: right;">updated <?= $updatedOnText ?> ago</span>
         </div>
         <!-- /title -->
         <!-- info -->
