--- a/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
@@ -20,7 +20,7 @@
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
 
-$plingData = $this->userPlings($this->project_id);
+//$plingData = $this->userPlings($this->project_id);
 $productFileInfos = $this->projectFiles($this->ppload_collection_id);
 $productUpdates = $this->projectUpdates($this->project_id);
 $loopProductId = 'product' . $this->project_id;
