--- a/application/modules/default/views/scripts/user/plings.phtml
+++ b/application/modules/default/views/scripts/user/plings.phtml
@@ -42,13 +42,14 @@ $this->countDownloadsOverall = count($this->downloads);
                 </div>
                 <div class="my-products-list" id="my-payout-list">
                     <?php
-                    if ($this->countDownloadsOverall > 0) {
+                    //if ($this->countDownloadsOverall > 0) {
                         echo $this->render('user/partials/loopPlings.phtml');
-                    } else {
-                        echo '<div class="well well-sm" role="alert">You have no downloads and no plings.</div>';
-                    }
+                    //} else {
+                    //    echo '<div class="well well-sm" role="alert">You have no downloads and no plings.</div>';
+                    //}
                      ?>
                 </div>
+                
             </section>
             <!-- /PAGE BODY -->
         </section>
