--- a/httpdocs/theme/flatui/css/style.css
+++ b/httpdocs/theme/flatui/css/style.css
@@ -1023,15 +1023,16 @@ span.packagetypeos
 .comments-list .media-body .text{
     padding-left: 10px
 }    
-.comments-list .media-left, .comments-list img{
+ .comments-list img{
     border-radius: 50%;
-    width: 42px;
-    height: 42px;
+    width: 40px;
+    height: 40px;
+    border: 1px solid #ccc;
 }
 
-.comments-list .media-left, .comments-list img.img1{        
-    width: 62px;
-    height: 62px;
+.comments-list img.img1{        
+    width: 60px;
+    height: 60px;
 }
 .comments-list .history{
     color: rgb(200, 199, 199);
