--- a/httpdocs/theme/flatui/css/style.css
+++ b/httpdocs/theme/flatui/css/style.css
@@ -1014,7 +1014,7 @@ span.packagetypeos
         font-size:14px;
         font-weight: bold;
         color: rgb(102, 189, 221);
-        border-bottom: 1px dotted #000;
+        border-bottom: 1px dashed #000;
         margin-left: 10px;
     }
 .comments-list .media-body{
