--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -88,7 +88,7 @@ echo $this->render('partials/header/metaheader.phtml'); ?>
                                                     <a href="/settings/"><?= $this->translate('My Settings') ?></a>
                                                 </li>
                                                 <li class="link first">
-                                                    <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'payout') ?>">
+                                                    <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'plings') ?>">
                                                         <?= $this->translate('Plings') ?>
                                                     </a>
                                                 </li>
