--- a/application/modules/default/views/scripts/home/index-common.phtml
+++ b/application/modules/default/views/scripts/home/index-common.phtml
@@ -116,8 +116,8 @@ $member = $getAuthUser->getAuthUser();
                                                 </a>
                                             </li>
                                             <li class="link first">
-                                                <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'payout') ?>">
-                                                    <?= $this->translate('My plings') ?>
+                                                <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'plings') ?>">
+                                                    <?= $this->translate('Plings') ?>
                                                 </a>
                                             </li>
                                             <li class="link">
