--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -190,7 +190,8 @@ if ($this->countDownloadsOverall > 0) {
     
 ?>
     <div id="le-alert"  class="alert alert-warning alert-block" role="alert"><button href="#" type="button" class="close">&times;</button>
-        (*) Info: This service will go live on May first 2017. All previously shown amounts are for testing only.<br>
+        (*) 
+        <p>Info: This service will go live on May first 2017. All previously shown amounts are for testing only.</p>
         <p>TOS: This service is completely voluntary. It is within Hive01 full rights to deside:</p>
         <p>a) when and how much</p>
         <p>b) how much of the shown calculated amount is to be paied or</p>
