--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -190,11 +190,12 @@ if ($this->countDownloadsOverall > 0) {
     
 ?>
     <div id="le-alert"  class="alert alert-warning alert-block" role="alert"><button href="#" type="button" class="close">&times;</button>
-        (*) 
+        <p>(*)</p>
         <p>Info: This service will go live on May first 2017. All previously shown amounts are for testing only.</p>
+        <br>
         <p>TOS: This service is completely voluntary. It is within Hive01 full rights to deside:</p>
-        <p>a) when and how much</p>
-        <p>b) how much of the shown calculated amount is to be paied or</p>
+        <p>a) when and</p>
+        <p>b) how much of the shown calculated amount is to be paid or</p>
         <p>c) to cancel partly or complete payment with or without any reason</p>
             
     </div>
