--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -189,7 +189,7 @@ if ($this->countDownloadsOverall > 0) {
     
     
 ?>
-    <div id="le-alert"  class="alert alert-warning alert-block" role="alert"><button href="#" type="button" class="close">&times;</button>
+    <div id="le-alert"  class="alert alert-warning alert-block" role="alert">
         <p>(*)</p>
         <p>Info: This service will go live on May first 2017. All previously shown amounts are for testing only.</p>
         <br>
