--- a/application/modules/default/views/scripts/user/partials/loopPayout.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPayout.phtml
@@ -190,13 +190,13 @@ if ($this->countDownloadsOverall > 0) {
     
 ?>
     <div id="le-alert"  class="alert alert-warning alert-block" role="alert">
-        <p>(*)</p>
-        <p>Info: This service will go live on May first 2017. All previously shown amounts are for testing only.</p>
+        <p>(*) Info:</p><p>This service will go live on May, 1st 2017. All previously shown amounts are for testing only.</p>
         <br>
-        <p>TOS: This service is completely voluntary. It is within Hive01 full rights to deside:</p>
+        <p>TOS:</p>
+        <p>This payout service is completely voluntarily. It is within Hive01's full rights to deside at any time:</p>
         <p>a) when and</p>
         <p>b) how much of the shown calculated amount is to be paid or</p>
-        <p>c) to cancel partly or complete payment with or without any reason</p>
+        <p>c) to cancel partly or complete payment without giving any reasons.</p>
             
     </div>
 </div>
