--- a/httpdocs/theme/flatui/css/style.css
+++ b/httpdocs/theme/flatui/css/style.css
@@ -1018,7 +1018,7 @@ span.packagetypeos
         margin-left: 10px;
     }
 .comments-list .media-body{
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #ccc;
 }
 .comments-list .media-body .text{
     padding-left: 10px
